--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         Make sure to check this interesting news page out! There's no boundary
         to knowledge.
         </p>
-        <a href="news.html">Chek the page out!</a>
+        <a href="news.html">Check the page out!</a>
     </div>
     
     <div class="heading-2">Calendars and Newsletters</div>
